# xsv2

./: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  HOW_TO_RELEASE.md  README.md
.github/workflows/: ci.yml  release.yml
scripts/: benchmark-basic  build-release  github-release  github-upload
src/: config.rs  index.rs  main.rs  select.rs  util.rs
src/cmd/: cat.rs  count.rs  fixlengths.rs  flatten.rs  fmt.rs  frequency.rs  headers.rs  index.rs  input.rs  join.rs  partition.rs  reverse.rs  sample.rs  search.rs  select.rs  slice.rs  sort.rs  split.rs  stats.rs  table.rs
tests/: test_cat.rs  test_count.rs  test_fixlengths.rs  test_frequency.rs  test_gzip.rs  test_index.rs  test_partition.rs  test_reverse.rs  test_search.rs  test_select.rs  test_sort.rs  test_split.rs  test_stats.rs  test_table.rs  test_zstd.rs  tests.rs  workdir.rs
