[package]
name = "xsv"
version = "0.14.0-pre1"  #:version
edition = "2021"
authors = [
    "Andrew Gallant <jamslam@gmail.com>",
    "Seamus Abshere <seamus@abshere.net>",
]
description = "A high performance CSV command line toolkit."
documentation = "https://docs.rs/xsv"
homepage = "https://github.com/faradayio/xsv2"
repository = "https://github.com/faradayio/xsv2"
readme = "README.md"
keywords = ["csv", "tsv", "slice", "command"]
license = "Unlicense/MIT"
autotests = false

[[bin]]
name = "xsv2"
test = false
bench = false
doctest = false

[[test]]
name = "tests"

[profile.release]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

[dependencies]
byteorder = "1"
crossbeam-channel = "0.5"
csv = "1"
csv-index = "0.1.5"
docopt = "1"
filetime = "0.2"
flate2 = "1"
num_cpus = "1.4"
rand = "0.9"
regex = "1"
serde = "1"
serde_derive = "1"
streaming-stats = "0.2"
tabwriter = "1"
threadpool = "1.3"
zstd = "0.13"

[dev-dependencies]
flate2 = "1"
zstd = "0.13"
quickcheck = { version = "1.0", default-features = false }
log = "0.4"
